# bouncing-ball-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: scores.txt  setting.txt
common/: colors.h  functions.h  themes.h
components/: filemanage.h  game.h  settings.h  structs.h  window.h
database/: scores.txt  setting.txt
database/scores/: inf.txt  random.txt
database/scores/normal/: lvl1.txt  lvl2.txt  lvl3.txt
database/scores/timed/: lvl4.txt  lvl5.txt
